--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <span class="mx-md-2 d-inline-block"></span>
             <a href="https://wa.me/79181246116" class="text-white"><span class="mr-2 text-white icon-whatsapp"></span> <span class="d-none d-md-inline-block"></span></a>
             <span class="mx-md-2 d-inline-block"></span>
-            <a href="#" class="text-white"><span class="mr-2 text-white icon-telegram"></span> <span class="d-none d-md-inline-block"></span></a>
+            <a href="https://t.me/+u6hAHTTP71liNDc6" class="text-white"><span class="mr-2 text-white icon-telegram"></span> <span class="d-none d-md-inline-block"></span></a>
             </div>
           </div>         
         </div>        
@@ -412,6 +412,7 @@
         </div>
       </div>
     </div>
+
 
 
     <footer class="site-footer">
