--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-            <form action="http://127.0.0.1:3000/create" method="post">
+            <form action="https://assss-865u.onrender.com/create" method="post">
               <div class="form-group row">
                 <div class="col-md-12">
                   <input name="form[company]" type="text" class="form-control" placeholder="Наименование компании или имя">
