--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row align-items-center position-relative">         
             <div class="site-logo">
               <img src="icons/logo-header.png">
-              <a href="index.html" class="text-black"><span class="text-primary">Зерновая компания</a>
+              <a href="index.html" class="text-black"><span class="text-primary">&nbsp;Зерновая компания</a>
             </div>            
             <div class="col-12">
               <nav class="site-navigation text-right ml-auto " role="navigation">
