--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-            <form action="https://assss-865u.onrender.com/create" method="post">
+            <form action="http://127.0.0.1:3000/create" method="post">
               <div class="form-group row">
                 <div class="col-md-12">
                   <input name="form[company]" type="text" class="form-control" placeholder="Наименование компании или имя">
@@ -403,6 +403,10 @@
                 <div class="col-md-12">
                   <textarea name="form[message]" class="form-control" placeholder="Дополнительная информация" cols="30" rows="10"></textarea>
                 </div>
+              </div>
+              <div class="subscribe">
+                <input type="checkbox" id="subscribeNews" required="" name="subscribe" value="newsletter"><label for="subscribeNews">Я ознакомлен с правилами сайта и согласен на обработку персональных данных
+                </label>
               </div>
               <div class="form-group row">
                 <div class="col-md-6 ml-auto">
