--- a/index.html
+++ b/index.html
@@ -288,17 +288,9 @@
 
     <!--(КОНЕЦ)ЦЕНЫ С АДМИНКОЙ-->
     
-<!--DONT PRACTIC BE HAPPY-->
-<!--DONT PRACTIC BE HAPPY-->
-<!--DONT PRACTIC BE HAPPY-->   
 
 
-
-<!--DONT PRACTIC BE HAPPY-->
-<!--DONT PRACTIC BE HAPPY-->
-<!--DONT PRACTIC BE HAPPY-->
-
-<!--НАЧАЛО ФОРМЫ-->
+    <!--НАЧАЛО ФОРМЫ-->
 
     <div class="site-section" id="contact-section">
       <div class="container">
@@ -314,7 +306,7 @@
 
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-            <form action="http://127.0.0.1:3000/create" method="post">
+            <form action="https://atlant.onrender.com/create" method="post">
               <div class="form-group row">
                 <div class="col-md-12">
                   <input name="form[company]" type="text" class="form-control" placeholder="Наименование компании или имя">
